--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -171,6 +171,8 @@
                     },
                     "node_management_panel": {
                         "group_by": "Group By",
+                        "filter_by": "Filter By",
+                        "filter_placeholder": "Node name/mac",
                         "edit_roles_button": "Edit Roles",
                         "add_nodes_button": "Add Nodes",
                         "cant_configure_disks": "Unable to configure disks",
@@ -205,7 +207,10 @@
                     "no_nodes_in_fuel": "A pool of one or more unallocated nodes is needed for this operation. To add to the pool, configure nodes to boot from the network (a.k.a. PXE booting). Fuel will automatically provision and discover the nodes.",
                     "one_controller_restriction": "Only one controller can be assigned in a multi-node deployment that is not Highly-Available (HA).",
                     "incompatible_roles_warning" : "This role cannot be combined with the other roles already selected.",
-                    "new_controllers_in_ha_mode_restriction": "New controllers cannot be added to an operational environment."
+                    "new_controllers_in_ha_mode_restriction": "New controllers cannot be added to an operational environment.",
+                    "no_filtered_nodes_warning": "There are no nodes found matching the filter value.",
+                    "filtered_nodes_count":"__filtered_nodes_count__ of __count__ node",
+                    "filtered_nodes_count_plural": "__filtered_nodes_count__ of __count__ nodes"
                 },
                 "settings_tab": {
                     "title": "OpenStack Settings"
