--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -155,6 +155,8 @@
                     },
                     "node_management_panel": {
                         "group_by": "Group By",
+                        "filter_by": "Filter By",
+                        "filter_placeholder": "Node name/mac",
                         "edit_roles_button": "Edit Roles",
                         "add_nodes_button": "Add Nodes",
                         "cant_configure_disks": "Unable to configure disks",
@@ -188,7 +190,8 @@
                     "no_nodes_in_environment": "To add nodes to the environment, select the Add Nodes option, choose the nodes you want to allocate and assign roles to each.",
                     "no_nodes_in_fuel": "A pool of one or more unallocated nodes is needed for this operation. To add to the pool, configure nodes to boot from the network (a.k.a. PXE booting). Fuel will automatically provision and discover the nodes.",
                     "one_controller_restriction": "Only one controller can be assigned in a multi-node deployment that is not Highly-Available (HA).",
-                    "incompatible_roles_warning" : "This role cannot be combined with the other roles already selected."
+                    "incompatible_roles_warning" : "This role cannot be combined with the other roles already selected.",
+                    "no_filtered_nodes_warning": "There are no nodes found matching the filter value."
                 },
                 "settings_tab": {
                     "title": "OpenStack Settings"
