Fix for deployment result link
Change-Id: Iacfe3ea370d1cfc1e1700d0f46cebb4d1993de2b

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -28,6 +28,7 @@
                 "important": "Important",
                 "success": "Success",
                 "error": "Error",
+                "see_logs_prefix": "or",
                 "see_logs": "see the logs"
             },
             "node_details": {
@@ -332,7 +333,8 @@
                 "openstack_release": "OpenStack Release:",
                 "environment_status": "Environment Status:",
                 "cluster_was_modified_from_cli" : "Some deployment parameters for this environment have been modified from Fuel CLI. Changes from Fuel CLI take precedence over any settings made from your browser. Proceed with caution.",
-                "reconfigure_redhat_account": "You can __opt1__ reconfigure your Red Hat account __opt2__ or "
+                "reconfigure_redhat_account_prefix": "You can",
+                "reconfigure_redhat_account": "reconfigure your Red Hat account"
             },
             "capacity_page": {
                 "title": "Capacity Audit",
