Disable OSTF tests for empty env
Change-Id: I50ad326d677b7a27a0ef75ee30e622c299e1e2f8

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -315,7 +315,8 @@
                     "title": "OpenStack Health Check",
                     "run_tests_button": "Run Tests",
                     "stop_tests_button": "Stop Tests",
-                    "deploy_alert": "You must deploy your new OpenStack environment before running tests against it.",
+                    "not_deployed_cluster_alert": "You have to deploy the environment before running tests against it.",
+                    "running_task_alert": "Tests are not available for an environment still being deployed or resetted.",
                     "not_available_alert": "OSTF server is not available.",
                     "expected_duration": "Expected Duration",
                     "actual_duration": "Actual Duration",
