--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -148,6 +148,7 @@
                         "title_plural": "Configure interfaces on __count__ nodes",
                         "bond_button": "Bond Interfaces",
                         "unbond_button": "Unbond Interfaces",
+                        "bond_speed_warning": "It is not recommended to bond interfaces with different speed",
                         "speed": "Speed",
                         "bonding_mode": "Mode",
                         "bonding_modes": {
