Warning for different speed interface bonding
added warning and error if LACP bond type selected

Change-Id: I0b59c9c468b2554d6042295669cd970be0d84234
Closes-bug: 1287830

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -147,6 +147,8 @@
                         "title_plural": "Configure interfaces on __count__ nodes",
                         "bond_button": "Bond Interfaces",
                         "unbond_button": "Unbond Interfaces",
+                        "bond_speed_restriction": "It's not recommended to bond interfaces with different or undefined speed",
+                        "bond_speed_lacp_error": "It's prohibited to group interfaces with different speed in LACP bond",
                         "speed": "Speed",
                         "bonding_mode": "Mode",
                         "bonding_modes": {
