--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -50,8 +50,8 @@
                     "stopped": "Stopped"
                 },
                 "mode": {
-                    "multinode": "Multi-node",
-                    "ha_compact": "Multi-node with HA"
+                    "ha_compact": "Multi-node with HA",
+                    "multinode": "Multi-node"
                 }
             },
             "network": {
@@ -532,8 +532,7 @@
                     "removing": "移除中"
                 },
                 "mode": {
-                    "multinode": "多节点",
-                    "ha_compact": "HA多节点"
+                    "ha_compact": "HA多节点",
                 }
             },
             "network": {
