"Neutron with VXLAN segmentation" supporting added in web interface
Change-Id: I517fd12906d7b2f1d67ebb6e10bdbf2631da3b87
Implements: blueprint neutron-vxlan-support

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -379,7 +379,8 @@
                         "alert": "Neutron is not supported in __releaseName__",
                         "nova_network": "Nova-Network",
                         "neutr_gre": "Neutron with GRE segmentation",
-                        "neutr_vlan": "Neutron with VLAN segmentation"
+                        "neutr_vlan": "Neutron with VLAN segmentation",
+                        "neutr_vxlan": "Neutron with VXLAN segmentation"
                     },
                     "storage": {
                         "title": "Storage Backends",
@@ -935,7 +936,8 @@
                         "alert": "__releaseName__不支持Neutron",
                         "nova_network": "Nova-Network",
                         "neutr_gre": "Neutron GRE",
-                        "neutr_vlan": "Neutron VLAN"
+                        "neutr_vlan": "Neutron VLAN",
+                        "neutr_vxlan": "Neutron VXLAN"
                     },
                     "storage": {
                         "title": "后端存储",
