--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -13,6 +13,7 @@
                 "stop_button": "Stop",
                 "reset_button": "Reset",
                 "save_settings_button": "Save Settings",
+                "close_button": "Close",
                 "cancel_button": "Cancel",
                 "apply_changes_button": "Apply Changes",
                 "not_available": "N/A",
@@ -157,6 +158,11 @@
                         },
                         "drag_and_drop_description": "You can drag and drop logical networks between interfaces",
                         "neutron_vlan_range": "Neutron VLAN IDs",
+                        "configuration_error": {
+                            "title": "Interfaces configuration error",
+                            "saving_warning": "Unable to apply changes",
+                            "load_defaults_warning": "Unable to load default configuration"
+                        },
                         "validation": {
                             "too_many_untagged_networks": "Untagged networks can not be assigned to the same interface"
                         }
@@ -168,7 +174,10 @@
                         "volume_groups": "Volume Groups",
                         "total_space": "Total Space",
                         "unallocated": "Unallocated",
-                        "use_all_allowed_space": "Use All Allowed Space"
+                        "use_all_allowed_space": "Use All Allowed Space",
+                        "configure_disks_error": {
+                            "title": "Disks configuration error"
+                        }
                     },
                     "node_management_panel": {
                         "group_by": "Group By",
@@ -176,10 +185,12 @@
                         "filter_placeholder": "Node name/mac",
                         "edit_roles_button": "Edit Roles",
                         "add_nodes_button": "Add Nodes",
-                        "cant_configure_disks": "Unable to configure disks",
-                        "cant_configure_interfaces": "Unable to configure interfaces",
-                        "disks_configuration_warning": "Only nodes with identical disk capacities can be configured together in the same action.",
-                        "interfaces_configuration_warning": "Only undeployed nodes with an identical number of network interfaces can be configured together in the same action."
+                        "node_management_error": {
+                            "title": "Node management error",
+                            "saving_warning": "Unable to apply changes",
+                            "disks_configuration_warning": "Unable to configure disks: only nodes with identical disk capacities can be configured together in the same action.",
+                            "interfaces_configuration_warning": "Unable to configure interfaces: only undeployed nodes with an identical number of network interfaces can be configured together in the same action."
+                        }
                     },
                     "node": {
                         "status": {
@@ -214,6 +225,10 @@
                     "filtered_nodes_count_plural": "__filteredNodesCount__ of __count__ nodes"
                 },
                 "settings_tab": {
+                    "settings_error": {
+                        "title": "OpenStack Settings configuration error",
+                        "saving_warning": "Unable to apply changes"
+                    },
                     "title": "OpenStack Settings"
                 },
                 "actions_tab": {
@@ -244,6 +259,10 @@
                         "step_3": "3. Nodes listeners register test frames from other nodes",
                         "step_4": "4. Send DHCP discover messages on all available ports.",
                         "success_alert": "Verification succeeded. Your network is configured correctly.",
+                        "verification_error": {
+                            "title": "Network verification error",
+                            "saving_warning": "Verification failed"
+                        },
                         "fail_alert": "Verification failed.",
                         "node_name": "Node Name",
                         "node_mac_address": "Node MAC address",
@@ -409,6 +428,10 @@
                         "console": "console.",
                         "deploy": "Deploy Changes",
                         "env": "Environments"
+                    },
+                    "create_cluster_error": {
+                        "title" : "OpenStack environment error",
+                        "create_cluster_warning" : "Your OpenStack environment has been created, but configuration failed. You can configure it manually."
                     }
                 },
                 "dismiss_settings": {
@@ -485,8 +508,9 @@
                     "title": "Reset Environment",
                     "text": "Are you sure you want to reset this environment? All nodes in the environment will be deleted and returned to their pre-deployment state."
                 },
-                "error_occured": {
-                    "alert_text": "A server error has occured. Please contact the administrators."
+                "error_dialog": {
+                    "title": "Error",
+                    "warning": "A server error has occured. Please contact the administrators."
                 }
             }
         }
