vCenter integration UI added
Added vcenter input info for vcenter into settings and changed wizard and dependencies.
Generate Cirros metadata in Nailgun.
Customize labels for Cluster settings groups.

Change-Id: Ie46be6dc4a1219f8fbbf88ef6f6691e8476bf4d6

--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -372,7 +372,8 @@
                     "compute": {
                         "title": "Compute",
                         "kvm_description": "Choose this type of hypervisor if you run OpenStack on hardware",
-                        "qemu_description": "Choose this type of hypervisor if you run OpenStack on virtual hosts"
+                        "qemu_description": "Choose this type of hypervisor if you run OpenStack on virtual hosts",
+                        "vcenter_description": "Choose this type of hypervisor if you run OpenStack in a vCenter environment"
                     },
                     "network": {
                         "title": "Network",
