--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -372,7 +372,8 @@
                     "compute": {
                         "title": "Compute",
                         "kvm_description": "Choose this type of hypervisor if you run OpenStack on hardware",
-                        "qemu_description": "Choose this type of hypervisor if you run OpenStack on virtual hosts"
+                        "qemu_description": "Choose this type of hypervisor if you run OpenStack on virtual hosts",
+                        "vcenter_description": "Choose this type of hypervisor if you run OpenStack in a vCenter environment"
                     },
                     "network": {
                         "title": "Network",
@@ -673,7 +674,7 @@
                 "settings_tab": {
                     "title": "OpenStack设置",
                     "access": {
-                        "group_name": "访问",
+                        "label": "访问",
                         "user": {
                             "label": "用户名",
                             "description": "管理员用户名"
@@ -692,7 +693,7 @@
                         }
                     },
                     "additional_components": {
-                        "group_name": "额外组件",
+                        "label": "额外组件",
                         "sahara": {
                             "label": "安装Sahara",
                             "description": "如果选择，Sahara组件将被安装。"
@@ -707,7 +708,7 @@
                         }
                     },
                     "syslog": {
-                        "group_name": "系统日志",
+                        "label": "系统日志",
                         "syslog_transport": {
                             "label": "系统日志传输协议",
                             "values": {
@@ -729,7 +730,7 @@
                         }
                     },
                     "storage": {
-                        "group_name": "存储",
+                        "label": "存储",
                         "volumes_lvm": {
                             "label": "基于iSCSI的Cinder LVM卷",
                             "description": "需要至少一个Cinder节点"
@@ -752,7 +753,7 @@
                         }
                     },
                     "common": {
-                        "group_name": "通用",
+                        "label": "通用",
                         "debug": {
                             "label": "OpenStack调试日志",
                             "description": "调试模式能够提供更多信息，但也需要更多磁盘空间。"
