--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -146,6 +146,8 @@
                     "configure_interfaces": {
                         "title": "Configure interfaces on __name__",
                         "title_plural": "Configure interfaces on __count__ nodes",
+                        "vlan_id": "VLAN ID",
+                        "vlan_id_plural": "VLAN IDs",
                         "bond_button": "Bond Interfaces",
                         "unbond_button": "Unbond Interfaces",
                         "bond_speed_warning": "Bonding interfaces of different speeds is not recommended",
