--- a/nailgun/static/i18n/translation.json
+++ b/nailgun/static/i18n/translation.json
@@ -14,6 +14,7 @@
                 "reset_button": "Reset",
                 "save_settings_button": "Save Settings",
                 "cancel_button": "Cancel",
+                "upgrade_button": "Upgrade",
                 "apply_changes_button": "Apply Changes",
                 "not_available": "N/A",
                 "size": {
@@ -227,7 +228,10 @@
                     "reset_environment_warning": "This action will reset all existing nodes to their pre-deployment state, deleting your existing environment.",
                     "reset_disabled_for_new_cluster": "Reset Environment is not available for an environment not yet deployed.",
                     "repeated_reset_disabled": "The current environment is already being reset.",
-                    "reset_disabled_for_deploying_cluster": "Reset Environment is not available for an environment still being deployed. Use Stop Deployment to stop the deployment process."
+                    "reset_disabled_for_deploying_cluster": "Reset Environment is not available for an environment still being deployed. Use Stop Deployment to stop the deployment process.",
+                    "upgrade_cluster": "Upgrade Environment",
+                    "upgrade_cluster_message": "You are on the latest release"
+
                 },
                 "network_tab": {
                     "title": "Network Settings",
@@ -330,6 +334,7 @@
                 "deploy_changes": "Deploy Changes",
                 "redhat_setup": "Downloading",
                 "reset_environment": "Resetting",
+                "upgrade": "Upgrade",
                 "stop_deployment": "Stopping",
                 "stop_deployment_button": "Stop deployment",
                 "deployment_mode": "Environment Deployment Mode:",
@@ -482,6 +487,10 @@
                 "reset_environment": {
                     "title": "Reset Environment",
                     "text": "Are you sure you want to reset this environment? All nodes in the environment will be deleted and returned to their pre-deployment state."
+                },
+                "upgrade_environment": {
+                    "title": "Upgrade Environment",
+                    "text": "Are you sure you want to upgrade this environment?"
                 },
                 "error_occured": {
                     "alert_text": "A server error has occured. Please contact the administrators."
